[package]
name = "distribution-practice"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
self_update = {version = "0.30.0", features=["archive-tar", "archive-zip", "compression-flate2", "compression-zip-deflate"]}